some change for google web indexing

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ FLASK_SECRET_KEY="a-strong-and-random-secret-key"
 DEMO_TREE_ID="YOUR_DEMO_TREE_ID" # should be a public tree and in demo mode
 SUPPORT_EMAIL="your.email@support.com"
 ENV="development" # or production
+# GOOGLE_SITE_VERIFICATION="YOUR_GOOGLE_SITE_VERIFICATION" # this is optional
